2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Remove scroll timer on
	  dispose.

2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed "Bug 497566 -
	  Mouse-based word selection is a bit weird".

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSplitter.cs: Return no longer removes
	  bookmarks from lines.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: Fixed update issues
	  with indent selection commands.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed "Bug
	  498581 - Syntax highlighting engine crashes MD".

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Fix build.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/ILSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Delimiters are
	  now configurable in the syntax mode (IL syntax mode made
	  this required).

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: Reverted makefile.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: reverted to old
	  delimeters.

	* Makefile.am: 

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* SyntaxModes/ILSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Added IL syntax
	  mode.

2009-04-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* SyntaxModes/LuaSyntaxMode.xml: Added lua syntax mode.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs: Fixed "Bug 497118 - Code
	  folding makes debugging annoying".

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ClipboardActions.cs: Fixed some minor text