@@ -1,5 +1,11 @@
 2009-04-29  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/TextEditor.cs:
+	* Mono.TextEditor/TextViewMargin.cs: Fixed an issue I had
+	  while enabled compositing in metacity.
+
+2009-04-29  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/TextEditor.cs: Remove scroll timer on
 	  dispose.
 
